--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.uvsq.pglp</groupId>
-    <artifactId>coo</artifactId>
+    <artifactId>pglp</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
