--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>17</maven.compiler.release>
+        <maven.compiler.release>22</maven.compiler.release>
+        <maven.compiler.enablePreview>true</maven.compiler.enablePreview>
         <checkstyle.config.location>checkstyle.xml</checkstyle.config.location>
         <checkstyle.consoleOutput>false</checkstyle.consoleOutput>
         <checkstyle.violationSeverity>warning</checkstyle.violationSeverity>
